--- a/index.html
+++ b/index.html
@@ -6,31 +6,51 @@
   <title>Anish Vora</title>
 </head>
 
-<body>
+<body style="background-color: #e4f9f5;">
+  <table>
+    <tr>
+      <td><img src="pink guy.png" alt="pink man filthy frank face png"></td>
+      <td><h1>Anish Vora</h1>
+      <p>Student :D</p></td>
+    </tr>
   </table>
-  <tr>
-    <td><img src="pink guy.png" alt="pink man filthy frank face png"></td>
-    <td>
-      <h1>Anish Vora</h1>
-      <p><em>Student</em> :D </p>
-    </td>
-  </tr>
-  </table>
-
+  <hr>
   <h2>Skills</h2>
   <table cellspacing="4">
     <tr>
       <td>Houdini</td>
       <td>⭐⭐⭐</td>
     </tr>
-    <tr>
-      <td>Web Dev</td>
-      <td>⭐⭐⭐</td>
-    </tr>
   </table>
   <hr>
-  <h4><strong><a href="education.html">Education</a></strong></h4>
-  <h4><strong><a href="hobbies.html">Hobbies</a></strong></h4>
+  <h2>Work</h2>
+  <table cellspacing="10">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2016 - 2020</td>
+        <td>Studied animation. (Its still going on LMAO)</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td>Currently studying web devlopment.</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h2>Hobbies</h2>
+  <ol>
+    <li>Creating realistic Fx. </li>
+    <li>Creating photorealistic models.</li>
+    <li>Road trips.</li>
+    <li>Gaming</li>
+  </ol>
+  <hr>
   <h4><strong><a href="contact me.html">Contact me</a></strong></h4>
   <hr>
 </body>
